--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
-export DB_DOCTOR_HOST="localhost"
-export DB_DOCTOR_PORT="5432"
-export DB_DOCTOR_USER="jainam"
-export DB_DOCTOR_PASS="toor"
-export DB_DOCTOR_NAME="doctor"
+export DB_HOST="localhost"
+export DB_PORT="5432"
+export DB_USER="jainam"
+export DB_PASS="toor"
+export DB_NAME="doctor"
+export PORT="8080"
