Fix DB migrations in CI
Co-authored-by: akshat <akshat.shah@go-jek.com>
Co-authored-by: jainam <jainam.iitrpr@gmail.com>

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 export DB_HOST="localhost"
 export DB_PORT="5432"
-export DB_USER="jainam"
-export DB_PASS="toor"
-export DB_NAME="doctor"
+export DB_USER="postgres"
+export DB_PASS=""
+export DB_NAME="hospital"
 export PORT="8080"
