Configure URL and decouple timeout and interval
Co-authored-by: Dilip Sharma <dilipsharma640@gmail.com>

--- a/.env.production
+++ b/.env.production
@@ -4,14 +4,18 @@ export DB_PORT="5432"
 export DB_USER="postgres"
 export DB_PASS=""
 export DB_NAME="hospital"
+
+#server
 export PORT="8080"
+export HOST_ADDRESS="localhost"
+export HOST_PROTOCOL="http"
 
 export DB_MAX_OPEN_CONN="50"
 export DB_MAX_IDLE_CONN="20"
 
 #Long polling variables.
-export REQUEST_TIMEOUT="1800"        # 30 minutes.
+export REQUEST_TIMEOUT_SECONDS="1800"        # 30 minutes.
 
-export POLLING_TIMEOUT=="1860"          #31 minutes.
+export POLLING_WAIT_SECONDS=="5"          #31 minutes.
 
-export QUERY_INTERVAL="60"          #60 seconds.
+export QUERY_INTERVAL_SECONDS="60"          #60 seconds.
