--- a/.env.integration
+++ b/.env.integration
@@ -4,14 +4,18 @@ export DB_PORT="5432"
 export DB_USER="postgres"
 export DB_PASS=""
 export DB_NAME="hospital"
+
+#server
 export PORT="8080"
+export HOST_ADDRESS="localhost"
+export HOST_PROTOCOL="http"
 
 export DB_MAX_OPEN_CONN="5"
 export DB_MAX_IDLE_CONN="5"
 
 #Long polling variables.
-export REQUEST_TIMEOUT="600"        # 10 minutes.
+export REQUEST_TIMEOUT_SECONDS="600"        # 10 minutes.
 
-export POLLING_TIMEOUT=="630"          #10.5 minutes.
+export POLLING_WAIT_SECONDS="5"
 
-export QUERY_INTERVAL="30"          #30 seconds.
+export QUERY_INTERVAL_SECONDS="30"          #30 seconds.
