Add exponential backoff and random polling wait
Co-authored-by: jainam <jainam.iitrpr@gmail.com>

--- a/.env.production
+++ b/.env.production
@@ -16,6 +16,14 @@ export DB_MAX_IDLE_CONN="20"
 #Long polling variables.
 export REQUEST_TIMEOUT_SECONDS="1800"        # 30 minutes.
 
+export QUERY_INTERVAL_SECONDS="60"          #60 seconds.
+
+# Slack url
+export SLACK_URL="<slack_url>"                                                
+
+# Surgeon ID.
+export SURGEON_ID="haproxy"
+
 export POLLING_WAIT_SECONDS=="5"          #31 minutes.
 
-export QUERY_INTERVAL_SECONDS="60"          #60 seconds.
+export MAX_EXPONENTIAL_WAIT="1000"
