--- a/.env.integration
+++ b/.env.integration
@@ -16,6 +16,14 @@ export DB_MAX_IDLE_CONN="5"
 #Long polling variables.
 export REQUEST_TIMEOUT_SECONDS="600"        # 10 minutes.
 
+export QUERY_INTERVAL_SECONDS="30"          #30 seconds.
+
+# Slack url
+export SLACK_URL="<slack_url>"
+
+# Surgeon 
+export SURGEON_ID="haproxy"
+
 export POLLING_WAIT_SECONDS="5"
 
-export QUERY_INTERVAL_SECONDS="30"          #30 seconds.
+export MAX_EXPONENTIAL_WAIT="1000"
