Replace surgeonID with applicationID
Co-authored-by: Dilip Sharma <dilipsharma640@gmail.com>

--- a/.env.integration
+++ b/.env.integration
@@ -22,7 +22,7 @@ export QUERY_INTERVAL_SECONDS="30"          #30 seconds.
 export SLACK_URL="<slack_url>"
 
 # Surgeon 
-export SURGEON_ID="haproxy"
+export APPLICATION_ID="haproxy"
 
 export POLLING_WAIT_SECONDS="5"
 
