--- a/.env.production
+++ b/.env.production
@@ -22,7 +22,7 @@ export QUERY_INTERVAL_SECONDS="60"          #60 seconds.
 export SLACK_URL="<slack_url>"                                                
 
 # Surgeon ID.
-export SURGEON_ID="haproxy"
+export APPLICATION_ID="haproxy"
 
 export POLLING_WAIT_SECONDS=="5"          #31 minutes.
 
